<resources>
    <string name="app_name">TODOList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="topics_main_label">Topics</string>
    <string name="tasks_main_label">Tasks</string>
    <string name="topic_create_label">Create topic</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_label">Update {currentTopicName}</string>
    <string name="task_list_of_topic">Tasks of {currentTopicName}</string>
    <string name="empty_tasks">You don’t have any task ... \n Add something!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pick_date">Choose date</string>
    <string name="name_error">Name cannot be empty</string>
    <string name="date_error">Date cannot be empty</string>
    <string name="create">CREATE</string>
    <string name="update">UPDATE</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="remove_img">REMOVE IMAGE</string>
</resources>