<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/TopicList">

    <fragment
        android:id="@+id/TopicList"
        android:name="com.example.todolist.TopicList"
        android:label="@string/topics_main_label"

        tools:layout="@layout/topic_list">

        <action
            android:id="@+id/action_topic_list_to_topic_addition"
            app:destination="@id/AddTopic" />
        <action
            android:id="@+id/action_topic_list_to_topic_update"
            app:destination="@id/updateTopic" />
    </fragment>
    <fragment
        android:id="@+id/AddTopic"
        android:name="com.example.todolist.AddTopic"
        android:label="@string/topic_create_label"
        tools:layout="@layout/fragment_add_topic">

        <action
            android:id="@+id/action_topic_addition_to_topic_list"
            app:destination="@id/TopicList" />
    </fragment>
    <fragment
        android:id="@+id/updateTopic"
        android:name="com.example.todolist.UpdateTopic"
        android:label="@string/update_label" >
        <action
            android:id="@+id/action_topic_update_to_topic_list"
            app:destination="@id/TopicList" />
        <argument
            android:name="currentTopic"
            app:argType="com.example.todolist.model.Topic" />
        <argument
            android:name="currentTopicName"
            app:argType="string" />
    </fragment>
</navigation>